# graphann

./: .gitattributes  CMakeLists.txt  ENHANCEMENTS_SUMMARY.txt  QUICK_REFERENCE.md  README_ENHANCEMENTS.md  eval_loop.py  grid_results.txt  grid_search.py  implementation_plan.md  r32_dynamic_results.txt  r32_results.txt  r64_dynamic_results.txt  r64_results.txt  task.txt
include/: distance.h  experiments.h  quantizer.h  vamana_index.h
reports/: CODE_UNDERSTANDING.md  DA2303_Project__GraphANN.txt  ENHANCED_EXPERIMENTS.md  EXPERIMENTS_README.md  EXPERIMENTS_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  Latency_Optimization_Analysis.md  QUICK_START.md  README.md  optimization_report.md  presentation_implementation_plan.md  speech_script.md
scripts/: generate_presentation_plots.py  run_sift1m.sh  run_sift1m_full.sh  visualize_experiments.py
src/: benchmark.cpp  build_index.cpp  distance.cpp  experiment_runner.cpp  experiment_runner_v2.cpp  experiment_runner_v3.cpp  experiments.cpp  quantizer.cpp  search_index.cpp  vamana_index.cpp
